--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,19 +7,6 @@ spring:
   datasource:
     hikari:
       driver-class-name: oracle.jdbc.OracleDriver
-      jdbc-url: jdbc:oracle:thin:@//localhost:1521/XE
+      jdbc-url: jdbc:oracle:thin:@localhost:1521:XE
       username: hr
       password: hr
-
-
-  mvc:
-    pathmatch:
-      matching-strategy: ant_path_matcher
-
-#multipart
-servlet:
-  multipart:
-    enabled: true
-    max-request-size: 40MB
-    max-file-size: 40MB
-    file-size-threshold: 100MB
