--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,15 @@ spring:
       jdbc-url: jdbc:oracle:thin:@localhost:1521:XE
       username: hr
       password: hr
+
+  mvc:
+    path match:
+      matching-strategy: ant_path_matcher
+
+#multipart
+servlet:
+  multipart:
+    enabled: true
+    max-request-size: 40MB
+    max-file-size: 40MB
+    file-size-threshold: 100MB
