조남호 - 로그인 테스트

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     hikari:
       driver-class-name: oracle.jdbc.OracleDriver
-      jdbc-url: jdbc:oracle:thin:@localhost:1521:XE
+      jdbc-url: jdbc:oracle:thin:@3.34.49.70:1521:XE
       username: hr
       password: hr
 
